// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribution should match snapshot 1`] = `
<styled.footer>
  <styled.img
    alt="tmdb logo"
    src="tmdb-logo.png"
  />
  <styled.div>
    This product uses the TMDb API but is not endorsed or certified by TMDb.
  </styled.div>
</styled.footer>
`;

exports[`Header should match snapshot 1`] = `
<styled.header>
  <styled.h1>
    My Movies
  </styled.h1>
</styled.header>
`;

exports[`Main component should match snapshot 1`] = `
<main>
  <styled.div>
    Movies now playing
  </styled.div>
  <Component
    onChange={[Function]}
    value={8}
  />
  <Component
    minRating={8}
    movies={
      Array [
        Object {
          "adult": false,
          "backdrop_path": "/9ywA15OAiwjSTvg3cBs9B7kOCBF.jpg",
          "genre_ids": Array [
            18,
            10749,
          ],
          "id": 337167,
          "original_language": "en",
          "original_title": "Fifty Shades Freed",
          "overview": "Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.",
          "popularity": 572.203541,
          "poster_path": "/jjPJ4s3DWZZvI4vw8Xfi4Vqa1Q8.jpg",
          "release_date": "2018-02-07",
          "title": "Fifty Shades Freed",
          "video": false,
          "vote_average": 6.1,
          "vote_count": 1097,
        },
        Object {
          "adult": false,
          "backdrop_path": "/b6ZJZHUdMEFECvGiDpJjlfUWela.jpg",
          "genre_ids": Array [
            28,
            12,
            14,
            878,
          ],
          "id": 284054,
          "original_language": "en",
          "original_title": "Black Panther",
          "overview": "King T'Challa returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his country's new leader. However, T'Challa soon finds that he is challenged for the throne by factions within his own country as well as without.  Using powers reserved to Wakandan kings, T'Challa assumes the Black Panther mantel to join with girlfriend Nakia, the queen-mother, his princess-kid sister,  members of the Dora Milaje (the Wakandan \\"special forces\\"), and an American secret agent, to prevent Wakanda from being dragged into a world war.",
          "popularity": 329.754985,
          "poster_path": "/uxzzxijgPIY7slzFvMotPv8wjKA.jpg",
          "release_date": "2018-02-13",
          "title": "Black Panther",
          "video": false,
          "vote_average": 7.4,
          "vote_count": 3477,
        },
        Object {
          "adult": false,
          "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
          "genre_ids": Array [
            12,
            35,
            10751,
            16,
          ],
          "id": 354912,
          "original_language": "en",
          "original_title": "Coco",
          "overview": "Despite his family’s baffling generations-old ban on music, Miguel dreams of becoming an accomplished musician like his idol, Ernesto de la Cruz. Desperate to prove his talent, Miguel finds himself in the stunning and colorful Land of the Dead following a mysterious chain of events. Along the way, he meets charming trickster Hector, and together, they set off on an extraordinary journey to unlock the real story behind Miguel's family history.",
          "popularity": 211.906826,
          "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
          "release_date": "2017-10-27",
          "title": "Coco",
          "video": false,
          "vote_average": 7.8,
          "vote_count": 3404,
        },
      ]
    }
  />
  <Component />
</main>
`;

exports[`MinRatingSelect should match snapshot 1`] = `
<div
  id="MinRatingSelect"
>
  <label>
    Choose a minimum rating: 
  </label>
  <styled.select
    onChange={[Function]}
    value={5}
  >
    <option
      key="0"
      value="0"
    >
      none
    </option>
    <option
      key="5"
      value={5}
    >
      5
    </option>
    <option
      key="5.5"
      value={5.5}
    >
      5.5
    </option>
    <option
      key="6"
      value={6}
    >
      6
    </option>
    <option
      key="6.5"
      value={6.5}
    >
      6.5
    </option>
    <option
      key="7"
      value={7}
    >
      7
    </option>
    <option
      key="7.5"
      value={7.5}
    >
      7.5
    </option>
    <option
      key="8"
      value={8}
    >
      8
    </option>
    <option
      key="8.5"
      value={8.5}
    >
      8.5
    </option>
    <option
      key="9"
      value={9}
    >
      9
    </option>
    <option
      key="9.5"
      value={9.5}
    >
      9.5
    </option>
    <option
      key="10"
      value={10}
    >
      10
    </option>
  </styled.select>
</div>
`;

exports[`MovieGrid should match snapshot 1`] = `
<styled.div>
  <Component
    key="284054"
    movie={
      Object {
        "adult": false,
        "backdrop_path": "/b6ZJZHUdMEFECvGiDpJjlfUWela.jpg",
        "genre_ids": Array [
          28,
          12,
          14,
          878,
        ],
        "id": 284054,
        "original_language": "en",
        "original_title": "Black Panther",
        "overview": "King T'Challa returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his country's new leader. However, T'Challa soon finds that he is challenged for the throne by factions within his own country as well as without.  Using powers reserved to Wakandan kings, T'Challa assumes the Black Panther mantel to join with girlfriend Nakia, the queen-mother, his princess-kid sister,  members of the Dora Milaje (the Wakandan \\"special forces\\"), and an American secret agent, to prevent Wakanda from being dragged into a world war.",
        "popularity": 329.754985,
        "poster_path": "/uxzzxijgPIY7slzFvMotPv8wjKA.jpg",
        "release_date": "2018-02-13",
        "title": "Black Panther",
        "video": false,
        "vote_average": 7.4,
        "vote_count": 3477,
      }
    }
  />
  <Component
    key="354912"
    movie={
      Object {
        "adult": false,
        "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
        "genre_ids": Array [
          12,
          35,
          10751,
          16,
        ],
        "id": 354912,
        "original_language": "en",
        "original_title": "Coco",
        "overview": "Despite his family’s baffling generations-old ban on music, Miguel dreams of becoming an accomplished musician like his idol, Ernesto de la Cruz. Desperate to prove his talent, Miguel finds himself in the stunning and colorful Land of the Dead following a mysterious chain of events. Along the way, he meets charming trickster Hector, and together, they set off on an extraordinary journey to unlock the real story behind Miguel's family history.",
        "popularity": 211.906826,
        "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
        "release_date": "2017-10-27",
        "title": "Coco",
        "video": false,
        "vote_average": 7.8,
        "vote_count": 3404,
      }
    }
  />
</styled.div>
`;

exports[`MovieGridItem should match snapshot 1`] = `
<styled.div>
  <img
    alt="Black Panther"
    src="http://image.tmdb.org/t/p/w200//uxzzxijgPIY7slzFvMotPv8wjKA.jpg"
    width="200"
  />
  <h3>
    Black Panther
  </h3>
  <div>
    Rating: 
    7.4
  </div>
  <div>
    Review Count: 
    3477
  </div>
</styled.div>
`;
